test/expected/declare_lc.out
declare x as long char
        ^
9: error: "long char" is illegal for built-in type
